fp-sz-team/questions-system-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zhan-chalas-webapi
spec:
  replicas: 2
  selector:
      matchLabels:
        pod: zhan-chalas-webapi-label
  template:
      metadata:
        labels:
          pod: zhan-chalas-webapi-label
      spec:
        containers:
        - name: zhan-chalas-webapi-container
          image: filipchalas/zhan-chalas-webapi:1.0.0-45
          imagePullPolicy: Always
          ports:
          - name: webapi-port
            containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
