fp-sz-team/questions-system-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: zhan-chalas-webapi
spec:
  type: ClusterIP
  selector:
    pod: zhan-chalas-webapi-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8080
